--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 iOS+macOS/web/.DS_Store
 iOS+macOS/web/audio/.DS_Store
 .DS_Store
+.DS_Store
+iOS+macOS/.DS_Store
+iOS+macOS/HTMLfive-Container/.DS_Store
+iOS+macOS/HTMLfive-Mactainer/.DS_Store
+iOS+macOS/web/.DS_Store
